Strengthen challenge difficulty and fix logout race